--- a/questionpaper.html
+++ b/questionpaper.html
@@ -34,18 +34,18 @@
 </div>
 </div>
 <hr> 
-<marquee direction="right" scrollamount="5"> 
-    <a href="https://www.mediafire.com/file/0q6pe7bz9q9iujp/HBSE_Class_12_Physics_Preboard_2025.pdf/file">Preborad question paper of physics(12th)</a>
- <a href="https://www.mediafire.com/file/ptju6uberu2t30u/DOC-20250123-WA0000._%25282%2529.pdf/file">12th question</a>
-=======
-<hr>
-  <a class="g" href=" https://www.mediafire.com/file/jwl88whobl8jodd/12th_all_pre_board_paper__%25281%2529.pdf/file">Medical/Non medical pre board questions paper 2025(12th class)</a>
+   <a class="g" href=" https://www.mediafire.com/file/jwl88whobl8jodd/12th_all_pre_board_paper__%25281%2529.pdf/file">Medical/Non medical pre board questions paper 2025(12th class)</a>
   <hr>
-    <a class= "g" href="https://www.mediafire.com/file/bslzqu5bk7z63cj/HBSE_Class_12_Geography_Preboard_2025.pdf/file">12th preboard question paper(Geography -2025)</a>
-<hr>
-</marquee>
-  <hr>
-  <h2 class="phone">Hindi /English preboard wuestion paper of 12th class for all stream avalible in medical/nonmedical prebooard question paper</h2>
+  <div class="card-45">
+    <div class="card-title">
+        <h1>Title:Preboard question-paper-2025</h1>
+        <h6 > Class :12th<br>Subject:History,Political Science,Geography,Fine Arts</h6>
+        <br>
+        <a class="re" href="https://www.mediafire.com/file/j4bv23zwn4kj10d/12th_art.pdf/file">download</a>
+        <hr>
+    </div>
+ <hr>
+  <h3 class="phone">Hindi /English preboard wuestion paper of 12th class for all stream avalible in medical/nonmedical prebooard question paper</h3>
 </body>
 <style>
     .box{
@@ -109,6 +109,24 @@
      .g:hover{
         background-color: aliceblue;
      }
+     .phone{
+    background-color: aquamarine;
+  }
+  
+  .re{
+    background-color: aqua;
+    color: brown;
+  }
+  .re:hover{
+    color: chartreuse;
+  }
+  .shalu-5{
+    color:darkred;
+    
+  }
+   .card-45{
+    background-color: chartreuse;
+  }
 </style>
 </html>
  
