--- a/questionpaper.html
+++ b/questionpaper.html
@@ -19,6 +19,8 @@
                     <div class="col-4 cdiv"><a href="questionpaper.html">old question paper</a></div>
                   </div>
  </div>
+ <a href="https://wa.me/918168173141" <i class="fa-brands fa-whatsapp fa-bounce"></i><b class="shalu">contact on whatshap</b> </a>
+
  <hr>
  <div class="box"> 
  <div id="slides"> 
@@ -50,7 +52,7 @@
 <style>
     .box{
         height: 250px;
-        width: 450px;
+        width: 350px;
     }
      body{
         background-color: darkturquoise;
