--- a/questionpaper.html
+++ b/questionpaper.html
@@ -46,6 +46,7 @@
         <a class="re" href="https://www.mediafire.com/file/j4bv23zwn4kj10d/12th_art.pdf/file">download</a>
         <hr>
     </div>
+  </div>
   <h4 class="phone">Hindi /English preboard wuestion paper of 12th class for all stream avalible in medical/nonmedical prebooard question paper</h4>
 <hr>
 </body>
