--- a/questionpaper.html
+++ b/questionpaper.html
@@ -36,20 +36,20 @@
 </div>
 </div>
 <hr> 
-   <a class="g" href=" https://www.mediafire.com/file/jwl88whobl8jodd/12th_all_pre_board_paper__%25281%2529.pdf/file">Medical/Non medical pre board questions paper 2025(12th class)</a>
-  <hr>
-  <div class="card-45">
-    <div class="card-title">
-        <h1>Title:Preboard question-paper-2025</h1>
-        <h6 > Class :12th<br>Subject:History,Political Science,Geography,Fine Arts</h6>
-        <br>
-        <a class="re" href="https://www.mediafire.com/file/j4bv23zwn4kj10d/12th_art.pdf/file">download</a>
-        <hr>
-    </div>
-    </div>
-    <hr>
-  <h4 class="phone">Hindi /English preboard wuestion paper of 12th class for all stream avalible in medical/nonmedical prebooard question paper</h4>
-<hr>
+<table border="1">
+    <th>Sr.no</th>
+    <th>Title</th>
+    <th>Action</th>
+    <tr>
+        <td>1</td>
+        <td>12th-Preboard-questionpaper(Medical/Non-medical)</td>
+        <td> <a class="re" href="https://www.mediafire.com/file/j4bv23zwn4kj10d/12th_art.pdf/file">download</a>
+        </td>
+    </tr>
+    <td>2</td>
+    <td>12th-Preboard-questionpaper(Art-History,PoliticalScience,Geography,Finearts)</td>
+    <td><a class="re" href="https://www.mediafire.com/file/j4bv23zwn4kj10d/12th_art.pdf/file">download</a></td>
+ </table>
 </body>
 <style>
     .box{
@@ -110,27 +110,6 @@
             opacity: 0;
         }
     } 
-     .g:hover{
-        background-color: aliceblue;
-     }
-     .phone{
-    background-color:blueviolet
-  }
-  
-  .re{
-    background-color: aqua;
-    color: brown;
-  }
-  .re:hover{
-    color: chartreuse;
-  }
-  .shalu-5{
-    color:darkred;
-    
-  }
-   .card-45{
-    background-color: chartreuse;
-  }
 </style>
 </html>
  
