--- a/questionpaper.html
+++ b/questionpaper.html
@@ -36,10 +36,13 @@
 </div>
 </div>
 <hr> 
-<table border="2">
+<table  border="2">
+<tr>
     <th>Sr.no</th>
     <th>Title</th>
     <th>Action</th>
+</tr>
+<hr>
     <tr>
         <td>1</td>
         <td>12th-Preboard-questionpaper(Medical/Non-medical)</td>
@@ -112,6 +115,12 @@
             opacity: 0;
         }
     } 
+    table{
+        width: 350px;
+        height: auto;
+        display: inline-flexbox;
+        column-rule-style: double;
+    }
 </style>
 </html>
  
