--- a/questionpaper.html
+++ b/questionpaper.html
@@ -36,25 +36,34 @@
 </div>
 </div>
 <hr> 
-<table  border="2">
-<tr>
-    <th>Sr.no</th>
-    <th>Title</th>
-    <th>Action</th>
-</tr>
-<hr>
-    <tr>
-        <td>1</td>
-        <td>12th-Preboard-questionpaper(Medical/Non-medical)</td>
-        <td> <a class="re" href="https://www.mediafire.com/file/j4bv23zwn4kj10d/12th_art.pdf/file">download</a>
-        </td>
+<table border="1">
+    <colgroup>
+        <col span="dee">
+        <tr> 
+        <th>SRno</th>
+        <th>Title</th>
+        <th>Action</th>
     </tr>
     <tr> 
+        <td>1</td>
+        <td>12th-Preboard questionpaper(Art-Physics,PoliticalScience,Geography,Finearts))</td>
+        <td><a href="https://www.mediafire.com/file/j4bv23zwn4kj10d/12th_art.pdf/file">download</a></td>
+    </tr>
+    <tr>
         <td>2</td>
-        <td>12th-Preboard-questionpaper(Art-History,PoliticalScience,Geography,Finearts)</td>
-        <td><a class="re" href="https://www.mediafire.com/file/j4bv23zwn4kj10d/12th_art.pdf/file">download</a></td>
-        </tr>
+        <td>12th preboard-questionpaper(Medical/Non-medical)</td>
+        <td><a href="https://www.mediafire.com/file/ptju6uberu2t30u/DOC-20250123-WA0000._%25282%2529.pdf/file">download</td>
+    </tr>
+    </colgroup>
  </table>
+</body>
+<style>
+.dee{
+    width: 350px;
+    height: auto;
+}
+
+</style>
 </body>
 <style>
     .box{
