--- a/questionpaper.html
+++ b/questionpaper.html
@@ -36,9 +36,9 @@
 </div>
 </div>
 <hr> 
-<table  border="2">
+<table border="1">
 <tr>
-    <th>Sr.no</th>
+    <th>no</th>
     <th>Title</th>
     <th>Action</th>
 </tr>
@@ -46,13 +46,12 @@
     <tr>
         <td>1</td>
         <td>12th-Preboard-questionpaper(Medical/Non-medical)</td>
-        <td> <a class="re" href="https://www.mediafire.com/file/j4bv23zwn4kj10d/12th_art.pdf/file">download</a>
-        </td>
+        <td> <a class="re" href="https://www.mediafire.com/file/j4bv23zwn4kj10d/12th_art.pdf/file">download</a></td>
     </tr>
     <tr> 
         <td>2</td>
         <td>12th-Preboard-questionpaper(Art-History,PoliticalScience,Geography,Finearts)</td>
-        <td><a class="re" href="https://www.mediafire.com/file/j4bv23zwn4kj10d/12th_art.pdf/file">download</a></td>
+        <td><a href="https://www.mediafire.com/file/j4bv23zwn4kj10d/12th_art.pdf/file">download</a></td>
         </tr>
  </table>
 </body>
@@ -116,7 +115,7 @@
         }
     } 
     table{
-        width: 350px;
+        width: 250px;
         height: auto;
         display: inline-flexbox;
         column-rule-style: double;
