--- a/questionpaper.html
+++ b/questionpaper.html
@@ -36,13 +36,12 @@
 </div>
 </div>
 <hr> 
-<table border="1">
-<tr>
-    <th>no</th>
+<table border="1" width="350px" height="auto">
+    <tr>
+    <th>No.</th>
     <th>Title</th>
     <th>Action</th>
 </tr>
-<hr>
     <tr>
         <td>1</td>
         <td>12th-Preboard-questionpaper(Medical/Non-medical)</td>
@@ -61,7 +60,7 @@
         width: 350px;
     }
      body{
-        background-color: darkturquoise;
+        background-color:white;
      }
     a{
         color: dimgrey;
