--- a/questionpaper.html
+++ b/questionpaper.html
@@ -36,7 +36,7 @@
 </div>
 </div>
 <hr> 
-<table border="1" width="350px" height="auto">
+<table class="table table-bordered ">
     <tr>
     <th>No.</th>
     <th>Title</th>
@@ -113,16 +113,6 @@
             opacity: 0;
         }
     } 
-    tr{
-        width: 250px;
-        height: auto;
-    }
-  td{
-    width:250px;
-    height:autofit;
-  }
-  table{
-    background-color: aqua;
-  }
+ 
 </style>
 </html>
