--- a/questionpaper.html
+++ b/questionpaper.html
@@ -37,6 +37,7 @@
 </div>
 <hr> 
 <table class="table table-bordered ">
+    <col style="width: 350px">
     <tr>
     <th>No.</th>
     <th>Title</th>
@@ -45,7 +46,7 @@
     <tr>
         <td>1</td>
         <td>12th-Preboard-questionpaper(Medical/Non-medical)</td>
-        <td> <a class="re" href="https://www.mediafire.com/file/j4bv23zwn4kj10d/12th_art.pdf/file">download</a></td>
+        <td> <a  href="https://www.mediafire.com/file/j4bv23zwn4kj10d/12th_art.pdf/file">download</a></td>
     </tr>
     <tr> 
         <td>2</td>
