--- a/questionpaper.html
+++ b/questionpaper.html
@@ -37,7 +37,6 @@
 </div>
 <hr> 
 <table class="table table-bordered ">
-    <col style="width: 50px">
     <tr>
     <th>No.</th>
     <th>Title</th>
@@ -46,7 +45,7 @@
     <tr>
         <td>1</td>
         <td>12th-Preboard-questionpaper(Medical/Non-medical)</td>
-        <td> <a  href="https://www.mediafire.com/file/j4bv23zwn4kj10d/12th_art.pdf/file">download</a></td>
+        <td> <a  href="https://www.mediafire.com/file/jwl88whobl8jodd/12th_all_pre_board_paper__%25281%2529.pdf/file">download</a></td>
     </tr>
     <tr> 
         <td>2</td>
@@ -115,6 +114,9 @@
             opacity: 0;
         }
     } 
+ table th td tr.setcolwidth{
+      width:50%;
+ }
  
 </style>
 </html>
