--- a/questionpaper.html
+++ b/questionpaper.html
@@ -36,7 +36,7 @@
 </div>
 </div>
 <hr> 
-<table class="table table-bordered ">
+<table class="table table-bordered">
     <tr>
     <th>No.</th>
     <th>Title</th>
@@ -44,13 +44,18 @@
 </tr>
     <tr>
         <td>1</td>
-        <td>12th-Preboard-questionpaper(Medical/Non-medical)</td>
+        <td>12th-Preboard-questionpaper<br>(Medical/Non-medical)</td>
         <td> <a  href="https://www.mediafire.com/file/jwl88whobl8jodd/12th_all_pre_board_paper__%25281%2529.pdf/file">download</a></td>
     </tr>
     <tr> 
         <td>2</td>
-        <td>12th-Preboard-questionpaper(Art-History,PoliticalScience,Geography,Finearts)</td>
+        <td>12th-Preboard-questionpaper<br>(Art-History,PoliticalScience,<br>Geography,Finearts)</td>
         <td><a href="https://www.mediafire.com/file/j4bv23zwn4kj10d/12th_art.pdf/file">download</a></td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>12th model paper-2025(Physics,<br>Chemistry,Maths,Biology)</td>
+            <td><a href="https://www.mediafire.com/file/2kzn2fhx0kw5042/12_models_paper.pdf/file">download</a></td>
         </tr>
  </table>
 </body>
