--- a/questionpaper.html
+++ b/questionpaper.html
@@ -57,6 +57,8 @@
             <td>12th model paper-2025(Physics,<br>Chemistry,Maths,Biology)</td>
             <td><a class="deepak2005" href="https://www.mediafire.com/file/2kzn2fhx0kw5042/12_models_paper.pdf/file">download</a></td>
         </tr>
+        <td>4</td>
+        <td>12th Modelpaper-2025(history<br>fine art,geography,<br>political science,)</td>
  </table>
 </body>
 <style>
@@ -65,7 +67,7 @@
         width: 350px;
     }
      body{
-        background-color:darkcyan;
+        background-color:white;
      }
     a{
         color: dimgrey;
