--- a/questionpaper.html
+++ b/questionpaper.html
@@ -59,6 +59,7 @@
         </tr>
         <td>4</td>
         <td>12th Modelpaper-2025(history<br>fine art,geography,<br>political science,)</td>
+        <td><a class="deepak2005" href="https://www.mediafire.com/file/uq28jg33g6psp0v/12_art_model_paper_.pdf/file">download</a></td>
  </table>
 </body>
 <style>
@@ -68,7 +69,8 @@
     }
      body{
         background-color:white;
-     }
+          width: 350px;
+    }
     a{
         color: dimgrey;
     }
