--- a/questionpaper.html
+++ b/questionpaper.html
@@ -45,17 +45,17 @@
     <tr>
         <td>1</td>
         <td>12th-Preboard-questionpaper<br>(Medical/Non-medical)</td>
-        <td> <a class="deepak2005" href="https://www.mediafire.com/file/jwl88whobl8jodd/12th_all_pre_board_paper__%25281%2529.pdf/file">download</a></td>
+        <td> <a class="deepak2005" href="https://drive.google.com/file/d/1y43mVSzaM8f35PguWXqvNzDxznUDcrn5/view?usp=drivesdk">download</a></td>
     </tr>
     <tr> 
         <td>2</td>
         <td>12th-Preboard-questionpaper<br>(Art-History,PoliticalScience,<br>Geography,Finearts)</td>
-        <td><a class="deepak2005" href="https://www.mediafire.com/file/j4bv23zwn4kj10d/12th_art.pdf/file">download</a></td>
+        <td><a class="deepak2005" href="https://drive.google.com/file/d/1y43mVSzaM8f35PguWXqvNzDxznUDcrn5/view?usp=drivesdk">download</a></td>
         </tr>
         <tr>
             <td>3</td>
             <td>12th model paper-2025(Physics,<br>Chemistry,Maths,Biology)</td>
-            <td><a class="deepak2005" href="https://www.mediafire.com/file/2kzn2fhx0kw5042/12_models_paper.pdf/file">download</a></td>
+            <td><a class="deepak2005" href="https://drive.google.com/file/d/1y43mVSzaM8f35PguWXqvNzDxznUDcrn5/view?usp=drivesdk">download</a></td>
         </tr>
         <td>4</td>
         <td>12th Modelpaper-2025(history<br>fine art,geography,<br>political science,)</td>
