--- a/Cquestionpaper.html
+++ b/Cquestionpaper.html
@@ -14,10 +14,12 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-4 adiv"><a href="index.html">home</a></div>
-                <div class="col-4 bdiv"><a href="notes.html">notes of all topics</a></div>
-                    <div class="col-4 cdiv"><a href="questionpaper.html">old question paper</a></div>
-                  </div>
+            <div class="col-6 adiv"><a href="index.html">home</a></div>
+                <div class="col-6 bdiv"><a href="notes.html">notes of all topics</a></div>
+                    <div class="col-6 cdiv"><a href="Squestionpaper.html">School question paper</a></div>
+                    <div class="col-6 ddiv"><a href="Cquestionpaper.html">College question paper</a></div>
+ 
+                </div>
  </div>
  <a href="https://wa.me/918168173141" <i class="fa-brands fa-whatsapp fa-bounce"></i><b class="shalu">contact on whatshap</b> </a>
 
