--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
      <hr>
      <div class="container">
         <div class="row">
-            <div class="col-4 adiv"><a href="index.html">home</a></div>
-                <div class="col-4 bdiv"><a href="notes.html">notes of all topics</a></div>
-                    <div class="col-4 cdiv"><a href="questionpaper.html">question paper</a></div>
+            <div class="col-6 adiv"><a href="index.html">home</a></div>
+                <div class="col-6 bdiv"><a href="notes.html">notes of all topics</a></div>
+                    <div class="col-6 cdiv"><a href="Squestionpaper.html">School question paper</a></div>
+                    <div class="col-6 ddiv"><a href="Cquestionpaper.html">College question paper</a></div>
                   </div>
- </div>
 </div>
  <hr>
  <div class="container-2"> 
