--- a/notes.html
+++ b/notes.html
@@ -14,10 +14,12 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-4 adiv"><a href="index.html">home</a></div>
-                <div class="col-4 bdiv"><a href="notes.html">notes of all topics</a></div>
-                    <div class="col-4 cdiv"><a href="questionpaper.html">old question paper</a></div>
-                  </div>
+            <div class="col-6 adiv"><a href="index.html">home</a></div>
+                <div class="col-6 bdiv"><a href="notes.html">notes of all topics</a></div>
+                    <div class="col-6 cdiv"><a href="Suestionpaper.html">School question paper</a></div>
+                    <div class="col-6 ddiv"><a href="Cquestionpaper.html">College question paper</a></div>
+
+                </div>
  </div>
  <hr>
  <iframe width="350px" height="250px" style="border:0;" scrolling="no" src="https://go.screenpal.com/player/cTVr2anf2US?title=0&controls=1&share=1&download=1&embed=1&cl=1&width=1280&height=720&overlays=1&ff=1" autoplay="autoplay"; allowfullscreen="true"></iframe>
