--- a/Cquestionpaper.html
+++ b/Cquestionpaper.html
@@ -1,4 +1,4 @@
-  <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -10,128 +10,16 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
 <body>
     <div class="container">
         <div class="row">
             <div class="col-6 adiv"><a href="index.html">home</a></div>
                 <div class="col-6 bdiv"><a href="notes.html">notes of all topics</a></div>
-                    <div class="col-6 cdiv"><a href="Cquestionpaper.html">College question paper</a></div>
-                    <div class="col-6 ddiv"><a href="Squestionpaper.html">School question paper</a></div>
- 
-                </div>
- </div>
- <a href="https://wa.me/918168173141" <i class="fa-brands fa-whatsapp fa-bounce"></i><b class="shalu">contact on whatshap</b> </a>
-
- <hr>
- <div class="box"> 
- <div id="slides"> 
-     <div class="slide slide-1" > 
-    <img src= "https://i.im.ge/2025/01/15/zBjSZq.1000016724.webp"> 
-</div>
-<div class="slide slide-2"> 
-     <img src="https://i.im.ge/2025/01/21/HMzJ5y.1000005345.webp"> 
+                    <div class="col-6 cdiv"><a href="Squestionpaper.html">School question paper</a></div>
+                    <div class="col-6 ddiv"><a href="Cquestionpaper.html">College question paper</a></div>
+                  </div>
     </div>
-<div class="slide slide-3"> 
-    <img src= "https://i.im.ge/2025/01/21/HMzHfa.1000013746.webp">
-</div>
-</div>
-</div>
-<hr> 
-<table class="table table-bordered">
-    <tr>
-    <th>No.</th>
-    <th>Title</th>
-    <th>Action</th>
-</tr>
-    <tr>
-        <td>1</td>
-        <td>12th-Preboard-questionpaper<br>(Medical/Non-medical)</td>
-        <td> <a class="deepak2005" href="https://drive.google.com/file/d/1y43mVSzaM8f35PguWXqvNzDxznUDcrn5/view?usp=drivesdk">download</a></td>
-    </tr>
-    <tr> 
-        <td>2</td>
-        <td>12th-Preboard-questionpaper<br>(Art-History,PoliticalScience,<br>Geography,Finearts)</td>
-        <td><a class="deepak2005" href="https://drive.google.com/file/d/1y43mVSzaM8f35PguWXqvNzDxznUDcrn5/view?usp=drivesdk">download</a></td>
-        </tr>
-        <tr>
-            <td>3</td>
-            <td>12th model paper-2025(Physics,<br>Chemistry,Maths,Biology)</td>
-            <td><a class="deepak2005" href="https://drive.google.com/file/d/1y43mVSzaM8f35PguWXqvNzDxznUDcrn5/view?usp=drivesdk">download</a></td>
-        </tr>
-        <td>4</td>
-        <td>12th Modelpaper-2025(history<br>fine art,geography,<br>political science,)</td>
-        <td><a class="deepak2005" href="https://drive.google.com/file/d/1y43mVSzaM8f35PguWXqvNzDxznUDcrn5/view?usp=drivesdk">download</a></td>
- </table>
 </body>
-<style>
-    .box{
-        height: 250px;
-        width: 350px;
-    }
-     body{
-        background-color:white;
-          width: 350px;
-    }
-    a{
-        color: dimgrey;
-    }
-     a:hover{
-        color: #000;
-     }
-    .row{
-        background-color: gainsboro;      
-    }
-    .row:hover{
-         background-color: yellow;
-    }
-    .slides{
-        height: 450px;
-        width: 350px;
-        overflow: hidden;
-        position: relative;
-    }
-    .slide{
-        position: absolute;
-        height: 250px;
-        opacity: 0;
-        animation: slide-show 12s infinite;
-    }
-    .slide-2{
-        animation-delay: 8s;
-    }
-    .slide-3{
-        animation-delay: 15s;
-    }
-    .slide img{
-        width: 350px;
-        height:250px;
-        
-    }
-    @keyframes slide-show{
-        0%{
-            opacity: 0;
-        }
-        10%{
-            opacity: 1;
-        }
-        20%,
-        30%{
-            opacity: 1;
-            scale:1.03;
-        }
-        50%{
-            opacity: 0;
-        }
-    } 
- table th td tr.setcolwidth{
-      width:50%;
- }
- td{
-    color:green;
- }
- .deepak2005{
-    color: green;
- }
-</style>
 </html>
