--- a/Cquestionpaper.html
+++ b/Cquestionpaper.html
@@ -21,5 +21,7 @@
                     <div class="col-6 ddiv"><a href="Cquestionpaper.html">College question paper</a></div>
                   </div>
     </div>
+    <hr>
+    <h1>this page is comming soon</h1>
 </body>
 </html>
