--- a/index.html
+++ b/index.html
@@ -153,11 +153,8 @@
          color: hotpink;
      }
      .row{
-        background-color: forestgreen;
+        background-color: white;
         color: azure;
-      }
-      .row:hover{
-        background:linear-gradient(to left,blue,pink)
       }
       .row-2{
         background-color: darkslategrey;
