--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </div>
 <hr>
     <div class="y"> 
-    <marquee direction="left" >        
+    <marquee direction="down" scrollamount="5">        
         <span style='font-size:100px;'>&#128646;</span>
 </marquee>
 </div>
