--- a/index.html
+++ b/index.html
@@ -101,6 +101,10 @@
 </div>
 </body>
 <style>
+    body{
+        @import url('https://fonts.cdnfonts.com/css/gilroy');
+        font-family: 'Gilroy', sans-serif;
+    }
     h1{
         background-color: blue;
     }
