--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <ul class="nav nav-tabs">
         <li class="col-4" class="nav-item"><a class="nav-link active" href="#about" data-bs-toggle="tab">about website</a></li>
         <li class="col-4" class="nav-item"><a class="nav-link " href="#videos" data-bs-toggle="tab">videos</a></li>
-        <li class="col-4" class="nav-item"><a class="nav-link disabled" href="#images" data-bs-toggle="tab">images</a></li>
+        <li class="col-4" class="nav-item"><a class="nav-link disabled" href="#random" data-bs-toggle="tab">random notes</a></li>
         <li class="col-4" class="nav-item"><a class="nav-link" href="#titles" data-bs-toggle="tab">titles</a></li>
         <li class="col-4" class="nav-item"><a class="nav-link" href="#pages" data-bs-toggle="tab">pages details</a></li>
         <li class="col-4" class="nav-item"><a class="nav-link" href="#contact" data-bs-toggle="tab">contact me</a></li>
@@ -61,10 +61,8 @@
         <div id="videos" class="tab-pane fade">
             <iframe width="350px" height="250px" src="https://www.youtube.com/embed/eEUYHmvQG-U" title="new motivational short video || inspiration short video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
-        <div id="images" class="tab-pane fade">
-            <div class="image-group" height="250px" width="450px"> 
-            <img src=" https://tse4.mm.bing.net/th?id=OIP.7EDIeYw0cFdhuF6W7AakOwHaHa&pid=Api&P=0&h=180">
-        </div>
+        <div id="random" class="tab-pane fade">
+            <h1>COMING SOON...</h1>
         </div>
         <div id="titles" class="tab-pane fade">
            <div class="card-9">
@@ -101,10 +99,6 @@
 </div>
 </body>
 <style>
-    body{
-        @import url('https://fonts.cdnfonts.com/css/gilroy');
-        font-family: 'Gilroy', sans-serif;
-    }
     h1{
         background-color: blue;
     }
