--- a/index.html
+++ b/index.html
@@ -42,23 +42,14 @@
     <div class="row-2">
         <div class="col"> 
         <div> 
-    <ul class="nav nav-tabs">
-        <li class="col-4" class="nav-item"><a class="nav-link active" href="#about" data-bs-toggle="tab">about website</a></li>
-        <li class="col-4" class="nav-item"><a class="nav-link " href="#videos" data-bs-toggle="tab">videos</a></li>
-        <li class="col-4" class="nav-item"><a class="nav-link disabled" href="#random" data-bs-toggle="tab">random notes</a></li>
+    <ul class="nav nav-tabs">        <li class="col-4" class="nav-item"><a class="nav-link active" href="#videos" data-bs-toggle="tab">videos</a></li>
+        <li class="col-4" class="nav-item"><a class="nav-link" href="#random" data-bs-toggle="tab">random notes</a></li>
         <li class="col-4" class="nav-item"><a class="nav-link" href="#titles" data-bs-toggle="tab">titles</a></li>
         <li class="col-4" class="nav-item"><a class="nav-link" href="#pages" data-bs-toggle="tab">pages details</a></li>
         <li class="col-4" class="nav-item"><a class="nav-link" href="#contact" data-bs-toggle="tab">contact me</a></li>
     </ul>
     <div class="tab-content">
-        <div id="about" class="active tab-pane fade in show">
-               <div class="box"> 
-            this website is made for help students fo taking notes,old questions paper,all kind of notes
-                <br>
-                <h2> onecan contact me for any kind of infirmation I will provide all kinds of notes</h2>
-            </div>
-        </div>
-        <div id="videos" class="tab-pane fade">
+        <div id="videos" class="active tab-pane fade in active">
             <iframe width="350px" height="250px" src="https://www.youtube.com/embed/eEUYHmvQG-U" title="new motivational short video || inspiration short video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
         <div id="random" class="tab-pane fade">
