--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
     <div class="row-2">
         <div class="col"> 
         <div> 
-    <ul class="nav nav-tabs">        <li class="col-4" class="nav-item"><a class="nav-link active" href="#videos" data-bs-toggle="tab">videos</a></li>
-        <li class="col-4" class="nav-item"><a class="nav-link" href="#random" data-bs-toggle="tab">random notes</a></li>
-        <li class="col-4" class="nav-item"><a class="nav-link" href="#titles" data-bs-toggle="tab">titles</a></li>
-        <li class="col-4" class="nav-item"><a class="nav-link" href="#pages" data-bs-toggle="tab">pages details</a></li>
-        <li class="col-4" class="nav-item"><a class="nav-link" href="#contact" data-bs-toggle="tab">contact me</a></li>
+    <ul class="nav nav-tabs">    
+    <li class="col-6" class="nav-item"><a class="nav-link active" href="#videos" data-bs-toggle="tab">videos</a></li>
+        <li class="col-6" class="nav-item"><a class="nav-link" href="#random" data-bs-toggle="tab">random notes</a></li>
+         <li class="col-6" class="nav-item"><a class="nav-link" href="#pages" data-bs-toggle="tab">pages details</a></li>
+        <li class="col-6" class="nav-item"><a class="nav-link" href="#contact" data-bs-toggle="tab">contact me</a></li>
     </ul>
     <div class="tab-content">
         <div id="videos" class="active tab-pane fade in active">
@@ -55,12 +55,6 @@
         <div id="random" class="tab-pane fade">
             <h1>COMING SOON...</h1>
         </div>
-        <div id="titles" class="tab-pane fade">
-           <div class="card-9">
-            <h1>sequential circuit</h1>
-<p>Sequential circuits are digital circuits that store and use previous state information to determine their next state. They are commonly used in digital systems to implement state machines, timers, counters, and memory elements and are essential components in digital systems design. Sequential circuits are commonly used in digital systems to implement state machines, timers, counters, and memory elements. The memory elements in sequential circuits can be implemented using flip-flops, which are circuits that store binary values and maintain their state even when the inputs change.</p>
-</div>
-</div>
         <div id="pages" class="tab-pane fade">   
             <hr>     
             <div class="card-3"> 
