--- a/notes.html
+++ b/notes.html
@@ -15,7 +15,7 @@
     <div class="container">
         <div class="row">
             <div class="col-6 adiv"><a href="index.html">home</a></div>
-            <div class="col-6 bdiv"><a href="notes.html">notes of all topics</a></div>
+            <div class="col-6 bdiv"><a href="notes.html">random notes</a></div>
                 <div class="col-6 cdiv"><a href="Squestionpaper.html">School question paper</a></div>
                 <div class="col-6 ddiv"><a href="Cquestionpaper.html">College question paper</a></div>
 
