--- a/Squestionpaper.html
+++ b/Squestionpaper.html
@@ -16,8 +16,8 @@
         <div class="row">
             <div class="col-6 adiv"><a href="index.html">home</a></div>
                 <div class="col-6 bdiv"><a href="notes.html">notes of all topics</a></div>
-                    <div class="col-6 cdiv"><a href="Squestionpaper.html">School question paper</a></div>
-                    <div class="col-6 ddiv"><a href="Cquestionpaper.html">College question paper</a></div>
+                    <div class="col-6 cdiv"><a href="Squestionpaper.html">School Section</a></div>
+                    <div class="col-6 ddiv"><a href="Cquestionpaper.html">College Section</a></div>
                 </div>
  </div>
  <a href="https://wa.me/918168173141" <i class="fa-brands fa-whatsapp fa-bounce"></i><b class="shalu">contact on whatshap</b> </a>
