--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
      <div class="container">
         <div class="row">
             <div class="col-6 adiv"><a href="index.html">home</a></div>
-                <div class="col-6 bdiv"><a href="notes.html">notes of all topics</a></div>
-                    <div class="col-6 cdiv"><a href="Squestionpaper.html">School question paper</a></div>
-                    <div class="col-6 ddiv"><a href="Cquestionpaper.html">College question paper</a></div>
+                <div class="col-6 bdiv"><a href="notes.html">random notes</a></div>
+                    <div class="col-6 cdiv"><a href="Squestionpaper.html">School Section</a></div>
+                    <div class="col-6 ddiv"><a href="Cquestionpaper.html">College Section</a></div>
                   </div>
 </div>
  <hr>
@@ -44,7 +44,7 @@
         <div> 
     <ul class="nav nav-tabs">    
             <li class="col-4" class="nav-item"><a class="nav-link active" href="#videos" data-bs-toggle="tab">videos</a></li>
-          <li class="col-4" class="nav-item"><a class="nav-link" href="#pages" data-bs-toggle="tab">pages details</a></li>
+          <li class="col-4" class="nav-item"><a class="nav-link" href="#pages" data-bs-toggle="tab">section details</a></li>
         <li class="col-4" class="nav-item"><a class="nav-link" href="#contact" data-bs-toggle="tab">contact me</a></li>
     </ul>
     <div class="tab-content">
@@ -63,8 +63,6 @@
                 <h1>notes of all topics</h1>
                 <p>this page contains notes of classes(10th,12th,BCA,Some skills topics and this page will upadte according to requirement)</p>
         </div>
-        <h1>old questions papers</h1>
-        <p>this pages contains old questions paper for classes 10th,12th, BCA(CBLU)</p>
     </div>
         <div id="contact" class="tab-pane fade">        
             <a href="https://wa.me/918168173141" <i class="fa-brands fa-whatsapp fa-bounce"></i><b class="shalu">contact on whatshap</b> </a>
