--- a/Cquestionpaper.html
+++ b/Cquestionpaper.html
@@ -22,6 +22,14 @@
                   </div>
     </div>
     <hr>
-    <h1>this page is comming soon</h1>
+    <ul class="nav nav-tabs">    
+        <li class="col-6" class="nav-item"><a class="nav-link active" href="#notes" data-bs-toggle="tab">notes</a></li>
+      <li class="col-6" class="nav-item"><a class="nav-link" href="#questionpaper" data-bs-toggle="tab">questionpaper</a></li>
+    </ul>
+      <div class="tab-content">
+        <div id="notes" class="active tab-pane fade in active">
+         </div>
+        <div id="questionpaper" class="tab-pane fade">      
+        </div>
 </body>
 </html>
