--- a/Cquestionpaper.html
+++ b/Cquestionpaper.html
@@ -28,8 +28,10 @@
     </ul>
       <div class="tab-content">
         <div id="notes" class="active tab-pane fade in active">
+            hgg
          </div>
         <div id="questionpaper" class="tab-pane fade">      
+            hhj
         </div>
 </body>
 </html>
