--- a/Cquestionpaper.html
+++ b/Cquestionpaper.html
@@ -22,6 +22,7 @@
                   </div>
     </div>
     <hr>
+    <div class="row-3"> 
     <ul class="nav nav-tabs">    
         <li class="col-6" class="nav-item"><a class="nav-link active" href="#notes" data-bs-toggle="tab">notes</a></li>
       <li class="col-6" class="nav-item"><a class="nav-link" href="#questionpaper" data-bs-toggle="tab">questionpaper</a></li>
@@ -33,5 +34,15 @@
         <div id="questionpaper" class="tab-pane fade">      
             hhj
         </div>
+    </div>
+    <style>
+        .row-3{
+            background-color: bisque;
+        }
+        .row-3:hover{
+            color: brown;
+        }
+        
+    </style>
 </body>
 </html>
