--- a/Cquestionpaper.html
+++ b/Cquestionpaper.html
@@ -22,6 +22,7 @@
                   </div>
     </div>
     <hr>
+    <div class="container-8"> 
     <div class="row-3"> 
     <ul class="nav nav-tabs">    
         <li class="col-6" class="nav-item"><a class="nav-link active" href="#notes" data-bs-toggle="tab">notes</a></li>
@@ -35,6 +36,7 @@
             hhj
         </div>
     </div>
+    </div>
     <style>
         .row-3{
             background-color: bisque;
@@ -42,7 +44,9 @@
         .row-3:hover{
             color: brown;
         }
-        
+.container-8{
+    background-color: bisque;
+}
     </style>
 </body>
 </html>
