--- a/Cquestionpaper.html
+++ b/Cquestionpaper.html
@@ -22,8 +22,10 @@
                   </div>
     </div>
     <hr>
-    <div class="container-8"> 
-    <div class="row-3"> 
+    <div class="container-5"> 
+        <div class="row-4">
+            <div class="col"> 
+            <div> 
     <ul class="nav nav-tabs">    
         <li class="col-6" class="nav-item"><a class="nav-link active" href="#notes" data-bs-toggle="tab">notes</a></li>
       <li class="col-6" class="nav-item"><a class="nav-link" href="#questionpaper" data-bs-toggle="tab">questionpaper</a></li>
@@ -37,16 +39,18 @@
         </div>
     </div>
     </div>
+            </div>
+        </div>
     <style>
         .row-3{
             background-color: bisque;
         }
-        .row-3:hover{
-            color: brown;
+        .container-5{
+            background-color: bisque;
         }
-.container-8{
-    background-color: bisque;
-}
+        .row-5{
+            background-color: bisque;
+        }
     </style>
 </body>
 </html>
