--- a/Cquestionpaper.html
+++ b/Cquestionpaper.html
@@ -22,8 +22,8 @@
                   </div>
     </div>
     <hr>
-    <div class="container-5"> 
-        <div class="row-4">
+    <div class="container-2"> 
+        <div class="row-2">
             <div class="col"> 
             <div> 
     <ul class="nav nav-tabs">    
@@ -32,10 +32,10 @@
     </ul>
       <div class="tab-content">
         <div id="notes" class="active tab-pane fade in active">
-            hgg
+            coming soon
          </div>
         <div id="questionpaper" class="tab-pane fade">      
-            hhj
+            coming soon
         </div>
     </div>
     </div>
@@ -43,15 +43,6 @@
         </div>
     </div>
     <style>
-        .row-3{
-            background-color: bisque;
-        }
-        .container-5{
-            background-color: bisque;
-        }
-        .row-5{
-            background-color: bisque;
-        }
     </style>
 </body>
 </html>
