--- a/Squestionpaper.html
+++ b/Squestionpaper.html
@@ -37,6 +37,50 @@
 </div>
 </div>
 <hr> 
+<div class="container-2"> 
+    <div class="row-2">
+        <div class="col"> 
+        <div> 
+<ul class="nav nav-tabs">    
+    <li class="col-6" class="nav-item"><a class="nav-link active" href="#notes" data-bs-toggle="tab">notes</a></li>
+  <li class="col-6" class="nav-item"><a class="nav-link" href="#questionpaper" data-bs-toggle="tab">questionpaper</a></li>
+</ul>
+  <div class="tab-content">
+    <div id="notes" class="active tab-pane fade in active">
+        coming soon
+     </div>
+    <div id="questionpaper" class="tab-pane fade">      
+        <table class="table table-bordered">
+            <tr>
+            <th>No.</th>
+            <th>Title</th>
+            <th>Action</th>
+        </tr>
+            <tr>
+                <td>1</td>
+                <td>12th-Preboard-questionpaper<br>(Medical/Non-medical)</td>
+                <td> <a class="deepak2005" href="https://drive.google.com/file/d/1y43mVSzaM8f35PguWXqvNzDxznUDcrn5/view?usp=drivesdk">download</a></td>
+            </tr>
+            <tr> 
+                <td>2</td>
+                <td>12th-Preboard-questionpaper<br>(Art-History,PoliticalScience,<br>Geography,Finearts)</td>
+                <td><a class="deepak2005" href="https://drive.google.com/file/d/1y43mVSzaM8f35PguWXqvNzDxznUDcrn5/view?usp=drivesdk">download</a></td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td>12th model paper-2025(Physics,<br>Chemistry,Maths,Biology)</td>
+                    <td><a class="deepak2005" href="https://drive.google.com/file/d/1y43mVSzaM8f35PguWXqvNzDxznUDcrn5/view?usp=drivesdk">download</a></td>
+                </tr>
+                <td>4</td>
+                <td>12th Modelpaper-2025(history<br>fine art,geography,<br>political science,)</td>
+                <td><a class="deepak2005" href="https://drive.google.com/file/d/1y43mVSzaM8f35PguWXqvNzDxznUDcrn5/view?usp=drivesdk">download</a></td>
+         </table>
+    </div>
+</div>
+</div>
+        </div>
+    </div>
+</div>
 <table class="table table-bordered">
     <tr>
     <th>No.</th>
