--- a/Cquestionpaper.html
+++ b/Cquestionpaper.html
@@ -43,6 +43,10 @@
         </div>
     </div>
     <style>
+        .row-2{
+        background-color: darkslategrey;
+        
+      }   
     </style>
 </body>
 </html>
