--- a/Squestionpaper.html
+++ b/Squestionpaper.html
@@ -88,7 +88,7 @@
         width: 350px;
     }
      body{
-        background-color:white;
+        background-color:bisque;
           width: 350px;
     }
     a{
@@ -150,6 +150,9 @@
  }
  .deepak2005{
     color: green;
+ }
+ .row-2{
+    background-color: gold;
  }
 </style>
 </html>
