--- a/Cquestionpaper.html
+++ b/Cquestionpaper.html
@@ -42,5 +42,13 @@
             </div>
         </div>
     </div>
+    <style>
+        body{
+            background-color: gold;
+        }
+        .row-2{
+            background-color: bisque;
+        }
+    </style>
 </body>
 </html>
