--- a/Squestionpaper.html
+++ b/Squestionpaper.html
@@ -153,10 +153,8 @@
     color: green;
  }
  .row-2{
-    background-color: gold;
+    background-color:whitesmoke;
  }
- .table table-bordered{
-    background-color: azure;
- }
+  
 </style>
 </html>
