--- a/Cquestionpaper.html
+++ b/Cquestionpaper.html
@@ -49,6 +49,9 @@
         .row-2{
             background-color: bisque;
         }
+        ul{
+            background-color: aqua;
+        }
     </style>
 </body>
 </html>
