--- a/Cquestionpaper.html
+++ b/Cquestionpaper.html
@@ -47,7 +47,7 @@
             background-color: gold;
         }
         .row-2{
-            background-color: bisque;
+            background-color: white;
         }
         ul{
             background-color: aqua;
