--- a/Cquestionpaper.html
+++ b/Cquestionpaper.html
@@ -47,11 +47,9 @@
             background-color: gold;
         }
         .row-2{
-            background-color: white;
+            background-color: whitesmoke;
         }
-        ul{
-            background-color: aqua;
-        }
+        
     </style>
 </body>
 </html>
