--- a/Cquestionpaper.html
+++ b/Cquestionpaper.html
@@ -32,7 +32,19 @@
     </ul>
       <div class="tab-content">
         <div id="notes" class="active tab-pane fade in active">
-            coming soon
+            <table class="table table-bordered">
+                <tr>
+                <th>No.</th>
+                <th>Title</th>
+                <th>Action</th>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>CBLU(I<sub>st sem.</sub><br>Human value and Ethicsr<br>notes for all UG(AEC))</td>
+                <td><a href="https://drive.google.com/file/d/1zBpce-KjiDWzNgG52RkLxOJ8-bmjvlKB/view?usp=drivesdk">download</a></td>
+            </tr>
+                 </table>
+             
          </div>
         <div id="questionpaper" class="tab-pane fade">      
             coming soon
@@ -45,11 +57,14 @@
     <style>
         body{
             background-color: gold;
+            width: 350px;
         }
         .row-2{
             background-color: whitesmoke;
         }
-        
+        table th td tr.colsetwidth{
+            width: 50%;
+        }
     </style>
 </body>
 </html>
