--- a/Cquestionpaper.html
+++ b/Cquestionpaper.html
@@ -40,11 +40,10 @@
             </tr>
             <tr>
                 <td>1</td>
-                <td>CBLU(I<sub>st sem.</sub><br>Human value and Ethicsr<br>notes for all UG(AEC))</td>
+                <td>CBLU(I<sup>st sem.</sup>Human<br>value and Ethics notes for<br> all UG(AEC))</td>
                 <td><a href="https://drive.google.com/file/d/1zBpce-KjiDWzNgG52RkLxOJ8-bmjvlKB/view?usp=drivesdk">download</a></td>
             </tr>
-                 </table>
-             
+                 </table>   
          </div>
         <div id="questionpaper" class="tab-pane fade">      
             coming soon
