--- a/Squestionpaper.html
+++ b/Squestionpaper.html
@@ -147,10 +147,10 @@
       width:50%;
  }
  td{
-    color:green;
+    color:black;
  }
  .deepak2005{
-    color: green;
+    color: blue;
  }
  .row-2{
     background-color:whitesmoke;
