--- a/notes.html
+++ b/notes.html
@@ -24,8 +24,8 @@
  <iframe width="350px" height="250px" style="border:0;" scrolling="no" src="https://go.screenpal.com/player/cTVr2anf2US?title=0&controls=1&share=1&download=1&embed=1&cl=1&width=1280&height=720&overlays=1&ff=1" autoplay="autoplay"; allowfullscreen="true"></iframe>
  <hr>
  <div class="card-2"> 
-    <marquee direction="right" scrollamount="5"> 
-    <a class="card-1" href="https://www.mediafire.com/file/ov7te6p3nqw0ebt/Image_to_PDF_20250103_21.02.54_compress.pdf/file">BCA(Ist Sem.Foundation of computer science notes)</a>
+    <marquee direction="right" scrollamount="6"> 
+    <h1 class="card-1">other contents are coming very soon...</h1>
  </marquee>
 </div>
 <hr>
