--- a/notes.html
+++ b/notes.html
@@ -24,11 +24,10 @@
  <iframe width="350px" height="250px" style="border:0;" scrolling="no" src="https://go.screenpal.com/player/cTVr2anf2US?title=0&controls=1&share=1&download=1&embed=1&cl=1&width=1280&height=720&overlays=1&ff=1" autoplay="autoplay"; allowfullscreen="true"></iframe>
  <hr>
  <div class="card-2"> 
-    <marquee direction="right" scrollamount="6"> 
+    <marquee direction="down" scrollamount="3" scrolldelay="3"> 
     <h1 class="card-1">other contents are coming very soon...</h1>
  </marquee>
 </div>
-<hr>
  <style>
      .card-1{
         background-color: cadetblue;
