--- a/Cquestionpaper.html
+++ b/Cquestionpaper.html
@@ -21,6 +21,10 @@
                   </div>
     </div>
     <hr>
+    <marquee direction="left" scrollamount="4" scrolldelay="3">
+        <h2>COLLEGE SECTION</h2>
+    </marquee>
+    <hr>
     <div class="container-2"> 
         <div class="row-2">
             <div class="col"> 
