--- a/Squestionpaper.html
+++ b/Squestionpaper.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-6 adiv"><a href="index.html">home</a></div>
+            <div class="col-6 adiv"><a href="index.html">home section</a></div>
                 <div class="col-6 bdiv"><a href="notes.html">random notes</a></div>
                     <div class="col-6 cdiv"><a href="Squestionpaper.html">School Section</a></div>
                     <div class="col-6 ddiv"><a href="Cquestionpaper.html">College Section</a></div>
