--- a/index.html
+++ b/index.html
@@ -23,14 +23,15 @@
 </div>
 <hr>
     <div class="y"> 
-    <marquee direction="down" scrollamount="5">        
+    <marquee direction="down" scrollamount="5" scrolldelay="3"> 
+        <h2>HOME SECTION</h2>       
         <span style='font-size:100px;'>&#128646;</span>
 </marquee>
 </div>
      <hr>
      <div class="container">
         <div class="row">
-            <div class="col-6 adiv"><a href="index.html">home</a></div>
+            <div class="col-6 adiv"><a href="index.html">home section</a></div>
                 <div class="col-6 bdiv"><a href="notes.html">random notes</a></div>
                     <div class="col-6 cdiv"><a href="Squestionpaper.html">School Section</a></div>
                     <div class="col-6 ddiv"><a href="Cquestionpaper.html">College Section</a></div>
