--- a/index.html
+++ b/index.html
@@ -54,15 +54,24 @@
         <div id="pages" class="tab-pane fade">      
             <div class="card-3"> 
                 <div class="card-title">
-                    <h1>home</h1>
-                    <p>in this section ,the portion covered with:
-                        <br>
-                        about website,titles of many topics,contact,images,videos
-                    </p>
-                </div>
-                <h1>notes of all topics</h1>
-                <p>this page contains notes of classes(10th,12th,BCA,Some skills topics and this page will upadte according to requirement)</p>
-        </div>
+                    <h1>home section</h1>
+               <h4>Home section contains three parts:
+                <br>first for videos ,videos will be entertainment,motivational,thought,study related<br>second for section details ,which we have already discussed in section details and third for contact ,onecan contact me on whatshap or email
+               </h4>    
+                     <hr>
+                <h1>random notes</h1>
+        <h4> random notes will conatin all general notes  for incresaing knowlege</h4>
+        <hr>
+        <h1>School section</h1>
+          <h4> Scholl section contain two parts:
+            first for notes  and
+            second for all type of question paper related to school</h4>  
+            <hr>
+            <h1>College Section</h1>
+            <h4>College section also conatin two parts:
+                <br> first for notes and second for all type of questions paper </h4>
+    <hr>    
+    </div>
     </div>
         <div id="contact" class="tab-pane fade">        
             <a href="https://wa.me/918168173141" <i class="fa-brands fa-whatsapp fa-bounce"></i><b class="shalu">contact on whatshap</b> </a>
@@ -78,12 +87,11 @@
 </body>
 <style>
     h1{
-        background-color: blue;
+        background-color: darkgoldenrod;
     }
-     .y{
-        display: flex;
-        background: linear-gradient(to right,yellow,green);
-     }
+    h4{
+        background-color: chartreuse;
+    }
      .mar{
         color: cornflowerblue;
          background-color: turquoise;
@@ -110,6 +118,9 @@
     .container{
         background-color: white;
         
+    }
+    .y{
+        background-color: blanchedalmond;
     }
     .name2{
         color: chartreuse;
