--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <div class="card-title">
                     <h1>home section</h1>
                <h4>Home section contains three parts:
-                <br>first for videos ,videos will be entertainment,motivational,thought,study related<br>second for section details ,which we have already discussed in section details and third for contact ,onecan contact me on whatshap or email
+                <br>first for videos ,videos will be entertainment,motivational,thought<br>study related<br>second for section details ,which we have already discussed in section details and third for contact ,onecan contact me on whatshap or email
                </h4>    
                      <hr>
                 <h1>random notes</h1>
