--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </div>
 <hr>
     <div class="y"> 
-    <marquee direction="down" scrollamount="5" scrolldelay="3"> 
+    <marquee direction="right" scrollamount="5" scrolldelay="3"> 
         <h2>HOME SECTION</h2>       
         <span style='font-size:100px;'>&#9759;</span>
 </marquee>
