--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <marquee class="mar">
-        <h2>YOU ARE MOST WELCOME TO VISIT ON MY WEBSITE </h2>
+        <h2 <style'font-size:100px;'>&#9749;</style>YOU ARE MOST WELCOME TO VISIT ON MY WEBSITE </h2>
     </marquee>
     <hr> 
     <br>  
@@ -24,7 +24,7 @@
 <hr>
     <div class="y"> 
     <marquee direction="right" scrollamount="5" scrolldelay="3"> 
-        <h2>HOME SECTION</h2>       
+        <h2>HOME SECTION</h2>     
         <span style='font-size:100px;'>&#9759;</span>
 </marquee>
 </div>
