--- a/Cquestionpaper.html
+++ b/Cquestionpaper.html
@@ -22,7 +22,7 @@
     </div>
     <hr>
     <marquee direction="left" scrollamount="4" scrolldelay="3">
-        <h2>COLLEGE SECTION</h2>
+        <h2 <style'font-size:100px;'>&#9749;</style>COLLEGE SECTION</h2>
     </marquee>
     <hr>
     <div class="container-2"> 
