--- a/Squestionpaper.html
+++ b/Squestionpaper.html
@@ -37,7 +37,7 @@
 </div>
 <hr> 
 <marquee direction="left" scrollamount="4" scrolldelay="3">
-    <h2>SCHOOL SECTION</h2>
+    <h2 <style'font-size:100px;'>&#9749;</style>SCHOOL SECTION</h2>
 </marquee>
 <hr>
 <div class="container-2"> 
