--- a/notes.html
+++ b/notes.html
@@ -24,7 +24,7 @@
  <iframe width="350px" height="250px" style="border:0;" scrolling="no" src="https://go.screenpal.com/player/cTVr2anf2US?title=0&controls=1&share=1&download=1&embed=1&cl=1&width=1280&height=720&overlays=1&ff=1" autoplay="autoplay"; allowfullscreen="true"></iframe>
  <hr>
  <marquee direction="left" scrollamount="4" scrolldelay="3">
-    <h2>RANDOM NOTES SECTION</h2>
+    <h2 <style'font-size:100px;'>&#9749;</style>RANDOM NOTES SECTION</h2>
 </marquee>
 <hr>
  <div class="card-2"> 
