--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
         background-color: chartreuse;
     }
      .mar{
-        color: cornflowerblue;
-         background-color: turquoise;
+        color: white;
+         background-color:dimgrey;
        }
     body{
             background-color: mediumvioletred;
