--- a/notes.html
+++ b/notes.html
@@ -44,7 +44,8 @@
         background-color: cornsilk;
      }
     body{
-        background-color: aquamarine;
+        background-color: dimgrey;
+        color: white;
     }
     .row{
         background-color: black;
