--- a/notes.html
+++ b/notes.html
@@ -27,11 +27,16 @@
     <h2 <style'font-size:100px;'>&#9749;</style>RANDOM NOTES SECTION</h2>
 </marquee>
 <hr>
- <div class="card-2"> 
-    <marquee direction="down" scrollamount="3" scrolldelay="3"> 
-    <h1 class="card-1">other contents are coming very soon...</h1>
- </marquee>
-</div>
+  <table class="table-bordered">
+    <tr>
+        <th>No.</th>
+        <th>Title</th>
+        <th>Action</th>
+    </tr>
+    <td>1</td>
+    <td>Solar system - Concept,components of <br>solar system ,interior of Solar system</td>
+    <td><a class="ab" href="https://drive.google.com/file/d/1DDV_4KAcGlkuNbJb0_g8b7JOhO_iZlRM/view?usp=drivesdk">download</td>
+  </table>
  <style>
      .card-1{
         background-color: cadetblue;
@@ -64,6 +69,21 @@
     height: 300px;
     width: 250px;
    } 
+   table th td tr.colsetwidth{
+    width: 50%;
+   }
+   .ab{
+    color: blue;
+   }
+   .ab:hover{
+    color: aquamarine;
+   }
+   td{
+    color: aquamarine;
+   }
+   th{
+    color: brown;
+   }
  </style>
 </body>
 </html>
