--- a/notes.html
+++ b/notes.html
@@ -34,7 +34,7 @@
         <th>Action</th>
     </tr>
     <td>1</td>
-    <td>Solar system - Concept,components of <br>solar system ,interior of Solar system</td>
+    <td>Solar system - Concept,components of solar system ,interior of Solar system</td>
     <td><a class="ab" href="https://drive.google.com/file/d/1DDV_4KAcGlkuNbJb0_g8b7JOhO_iZlRM/view?usp=drivesdk">download</td>
   </table>
  <style>
