--- a/Cquestionpaper.html
+++ b/Cquestionpaper.html
@@ -43,7 +43,7 @@
             </tr>
             <tr>
                 <td>1</td>
-                <td>CBLU(I<sup>st sem.</sup>Human<br>value and Ethics notes for<br> all UG(AEC))</td>
+                <td>CBLU(I<sup>st sem.</sup>Human value and Ethics notes for all UG(AEC))</td>
                 <td><a href="https://drive.google.com/file/d/1zBpce-KjiDWzNgG52RkLxOJ8-bmjvlKB/view?usp=drivesdk">download</a></td>
             </tr>
                  </table>   
