--- a/Squestionpaper.html
+++ b/Squestionpaper.html
@@ -62,21 +62,21 @@
         </tr>
             <tr>
                 <td>1</td>
-                <td>12th-Preboard-questionpaper(Medical/Non-medical)</td>
+                <td>12th-Preboard-question <br>paper(Medical/Non-medical)</td>
                 <td> <a class="deepak2005" href="https://drive.google.com/file/d/1y43mVSzaM8f35PguWXqvNzDxznUDcrn5/view?usp=drivesdk">download</a></td>
             </tr>
             <tr> 
                 <td>2</td>
-                <td>12th-Preboard-questionpaper(Art-History,PoliticalScience,Geography,Finearts)</td>
+                <td>12th-Preboard-question<br>paper(Art-History,Political<br>Science,Geography,Finearts)</td>
                 <td><a class="deepak2005" href="https://drive.google.com/file/d/1y43mVSzaM8f35PguWXqvNzDxznUDcrn5/view?usp=drivesdk">download</a></td>
                 </tr>
                 <tr>
                     <td>3</td>
-                    <td>12th model paper-2025(Physics,Chemistry,Maths,Biology)</td>
+                    <td>12th model paper-2025<br>(Physics,Chemistry,Maths,<br>Biology)</td>
                     <td><a class="deepak2005" href="https://drive.google.com/file/d/1y43mVSzaM8f35PguWXqvNzDxznUDcrn5/view?usp=drivesdk">download</a></td>
                 </tr>
                 <td>4</td>
-                <td>12th Modelpaper-2025(history,fine art,geography,political science,)</td>
+                <td>12th Modelpaper-2025<br>(history,fine art,geography,<br>political science,)</td>
                 <td><a class="deepak2005" href="https://drive.google.com/file/d/1y43mVSzaM8f35PguWXqvNzDxznUDcrn5/view?usp=drivesdk">download</a></td>
          </table>
     </div>
@@ -145,9 +145,9 @@
             opacity: 0;
         }
     } 
- table th td tr.setcolwidth{
-      width:50%;
- }
+  table th td tr.colsetwidth{
+    width: 50%;
+  }
  td{
     color:black;
  }
