--- a/notes.html
+++ b/notes.html
@@ -21,7 +21,7 @@
                 </div>
  </div>
  <hr>
- <iframe width="350px" height="250px" style="border:0;" scrolling="no" src="https://go.screenpal.com/player/cTVr2anf2US?title=0&controls=1&share=1&download=1&embed=1&cl=1&width=1280&height=720&overlays=1&ff=1" controls loop="autoplay" allowfullscreen="true"></iframe>
+ <iframe width="350px" height="250px" style="border:0;" scrolling="no" src="https://go.screenpal.com/player/cTVr2anf2US?title=0&controls=1&share=1&download=1&embed=1&cl=1&width=1280&height=720&overlays=1&ff=1" autoplay"; allowfullscreen="true"></iframe>
  <hr>
  <marquee direction="left" scrollamount="4" scrolldelay="3">
     <h2 <style'font-size:100px;'>&#9749;</style>RANDOM NOTES SECTION</h2>
