--- a/Cquestionpaper.html
+++ b/Cquestionpaper.html
@@ -46,10 +46,21 @@
                 <td>CBLU(I<sup>st sem.</sup>Human value<br> and Ethics notes for <br>all UG(AEC))</td>
                 <td><a href="https://drive.google.com/file/d/1zBpce-KjiDWzNgG52RkLxOJ8-bmjvlKB/view?usp=drivesdk">download</a></td>
             </tr>
+            <td>2</td>
+             
                  </table>   
          </div>
         <div id="questionpaper" class="tab-pane fade">      
-            coming soon
+            <table class="table table-bordered">
+                <tr>
+                <th>No.</th>
+                <th>Title</th>
+                <th>Action</th>
+            </tr>
+            <td>1</td>
+            <td>CBLU(1<sup>st sem.</sup> MAIN -question paper<br> for all UG Courses <br>Papaer are :MDC,AEC,SEC,VAC)</td>
+            <td><a href="https://drive.google.com/file/d/1-B2Bq14qhh1sSsnewiXO4JNvaWJoWcrC/view?usp=drivesdk">download</a></td>
+            </table>
         </div>
     </div>
     </div>
