--- a/Squestionpaper.html
+++ b/Squestionpaper.html
@@ -62,12 +62,12 @@
         </tr>
             <tr>
                 <td>1</td>
-                <td>12th-Preboard-question <br>paper(Medical/Non-medical)</td>
+                <td>12th-Preboard-question<sup>2025</sup> <br>paper(Medical/Non-medical)</td>
                 <td> <a class="deepak2005" href="https://drive.google.com/file/d/1y43mVSzaM8f35PguWXqvNzDxznUDcrn5/view?usp=drivesdk">download</a></td>
             </tr>
             <tr> 
                 <td>2</td>
-                <td>12th-Preboard-question<br>paper(Art-History,Political<br>Science,Geography,Finearts)</td>
+                <td>12th-Preboard-question<sup>2025</sup><br>paper(Art-History,Political<br>Science,Geography,Finearts)</td>
                 <td><a class="deepak2005" href="https://drive.google.com/file/d/1y43mVSzaM8f35PguWXqvNzDxznUDcrn5/view?usp=drivesdk">download</a></td>
                 </tr>
                 <tr>
