--- a/Cquestionpaper.html
+++ b/Cquestionpaper.html
@@ -58,7 +58,7 @@
                 <th>Action</th>
             </tr>
             <td>1</td>
-            <td>CBLU(1<sup>st sem.2025</sup> MAIN -questionpaper<br> for all UG Courses <br>Papaer are :MDC,AEC,SEC,VAC)</td>
+            <td>CBLU(1<sup>st sem.2025</sup> MAIN-questionpaper for all UG Courses Papaer are :MDC,AEC,SEC,VAC) Subjects:Human value and Ethics,Communicative Skills in English,Basic It Tools,CSR and business Ethics</td>
             <td><a href="https://drive.google.com/file/d/1-B2Bq14qhh1sSsnewiXO4JNvaWJoWcrC/view?usp=drivesdk">download</a></td>
             </table>
         </div>
