--- a/Squestionpaper.html
+++ b/Squestionpaper.html
@@ -51,7 +51,18 @@
 <hr>
   <div class="tab-content">
     <div id="notes" class="active tab-pane fade in active">
-        coming soon
+        <table class="table table-bordered">
+          <tr> 
+            <th>No.</th> 
+            <th>Title</th>
+            <th>Action</th>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>12th Phyics notes of UNIT:Electrostatics</td>
+            <td><a class="deepak2005" href="https://drive.google.com/file/d/1-JzAmUfgKAVj2Mi_3izTpXKJcApvbNPm/view?usp=drivesdk">download</a></td>
+        </tr>
+        </table>
      </div>
     <div id="questionpaper" class="tab-pane fade">      
         <table class="table table-bordered">
