--- a/Squestionpaper.html
+++ b/Squestionpaper.html
@@ -59,7 +59,7 @@
         </tr>
         <tr>
             <td>1</td>
-            <td>12th Phyics notes of UNIT:Electrostatics</td>
+            <td>12th Physics notes of UNIT:Electrostatics</td>
             <td><a class="deepak2005" href="https://drive.google.com/file/d/1-JzAmUfgKAVj2Mi_3izTpXKJcApvbNPm/view?usp=drivesdk">download</a></td>
         </tr>
         </table>
