--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="col"> 
         <div> 
     <ul class="nav nav-tabs">    
-            <li class="col-4" class="nav-item"><a class="nav-link active" href="#videos" data-bs-toggle="tab">videos</a></li>
+            <li class="col-4" class="nav-item"><a class="nav-link" href="#videos" data-bs-toggle="tab">videos</a></li>
           <li class="col-4" class="nav-item"><a class="nav-link" href="#pages" data-bs-toggle="tab">section details</a></li>
         <li class="col-4" class="nav-item"><a class="nav-link" href="#contact" data-bs-toggle="tab">contact me</a></li>
     </ul>
