--- a/Squestionpaper.html
+++ b/Squestionpaper.html
@@ -45,7 +45,7 @@
         <div class="col"> 
         <div> 
 <ul class="nav nav-tabs">    
-    <li class="col-6" class="nav-item"><a class="nav-link active" href="#notes" data-bs-toggle="tab">notes</a></li>
+    <li class="col-6" class="nav-item"><a class="nav-link" href="#notes" data-bs-toggle="tab">notes</a></li>
   <li class="col-6" class="nav-item"><a class="nav-link" href="#questionpaper" data-bs-toggle="tab">questionpaper</a></li>
 </ul>
 <hr>
