--- a/Cquestionpaper.html
+++ b/Cquestionpaper.html
@@ -77,6 +77,9 @@
         table th td tr.colsetwidth{
             width: 50%;
         }
+        a:hover{
+            color: chartreuse;
+        }
     </style>
 </body>
 </html>
