--- a/Squestionpaper.html
+++ b/Squestionpaper.html
@@ -109,7 +109,7 @@
         color: dimgrey;
     }
      a:hover{
-        color: #000;
+        color: brown;
      }
     .row{
         background-color: gainsboro;      
