--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         color: azure;
       }
       .row-2{
-        background-color: darkslategrey;
+        background-color: grey;
         
       }   
       .tab-content{
@@ -168,5 +168,8 @@
       p{
         background-color: black;
       }    
+      a:hover{
+        color:darkslategray;
+      }
     </style> 
 </html>
