--- a/Cquestionpaper.html
+++ b/Cquestionpaper.html
@@ -32,6 +32,8 @@
     <ul class="nav nav-tabs">    
         <li class="col-6" class="nav-item"><a class="nav-link" href="#notes" data-bs-toggle="tab">notes</a></li>
       <li class="col-6" class="nav-item"><a class="nav-link" href="#questionpaper" data-bs-toggle="tab">questionpaper</a></li>
+      <li class="col-6" class="nav-item"><a class="nav-link" href="#practical" data-bs-toggle="tab">practical</a></li>
+      <li class="col-6" class="nav-item"><a class="nav-link" href="#assignment" data-bs-toggle="tab">assignment</a></li>
     </ul>
       <div class="tab-content">
         <div id="notes" class="active tab-pane fade in active">
@@ -45,11 +47,9 @@
                 <td>1</td>
                 <td>CBLU(I<sup>st sem.</sup>Human value<br> and Ethics notes for <br>all UG(AEC))</td>
                 <td><a href="https://drive.google.com/file/d/1zBpce-KjiDWzNgG52RkLxOJ8-bmjvlKB/view?usp=drivesdk">download</a></td>
-            </tr>
-            <td>2</td>
-             
-                 </table>   
-         </div>
+            </tr>   
+        </table>
+    </div>
         <div id="questionpaper" class="tab-pane fade">      
             <table class="table table-bordered">
                 <tr>
@@ -59,7 +59,35 @@
             </tr>
             <td>1</td>
             <td>CBLU(1<sup>st sem.2025</sup> MAIN-questionpaper for all UG Courses Papaer are :MDC,AEC,SEC,VAC) Subjects:Human value and Ethics,Communicative Skills in English,Basic It Tools,CSR and business Ethics</td>
-            <td><a href="https://drive.google.com/file/d/1-B2Bq14qhh1sSsnewiXO4JNvaWJoWcrC/view?usp=drivesdk">download</a></td>
+            <td><a href="https://drive.google.com/file/d/1-B2Bq14qhh1sSsnewiXO4JNvaWJoWcrC/view?usp=drivesdk">download</a></td> 
+    </table>
+</div>  
+        <div id="practical" class="tab-pane fade">
+            <table class="table table-bordered">
+<tr>
+    <th>No.</th>
+    <th>Title</th>
+    <th>Action</th>
+</tr>
+<tr>
+    <td>1</td>
+    <td>12th Maths practical(I<sup>sem.2025</sup>)</td>
+    <td><a href="https://drive.google.com/file/d/10ZxCzO0zt5GQfrt6PQMeL9iiur2NRFiu/view?usp=drivesdk">download</a></td>
+</tr>
+</table>
+        </div>
+        <div id="assignment" class="tab-pane fade">
+            <table class-="table table-bordered">
+<tr>
+    <th>No.</th>
+    <th>Title</th>
+    <th>Action</th>
+</tr>
+<tr> 
+<td>1</td>
+<td></td>
+<td><a href="">download</a></td>
+</tr>
             </table>
         </div>
     </div>
