--- a/Cquestionpaper.html
+++ b/Cquestionpaper.html
@@ -85,8 +85,8 @@
 </tr>
 <tr> 
 <td>1</td>
-<td></td>
-<td><a href="">download</a></td>
+<td>Foundation of computer science for <sup class="dep">1st sem.</sup> Topic:Electronic mail,search engines,web browser</td>
+<td><a href="https://drive.google.com/file/d/10c2f9arbK5a8iB_Ddp6bjBWNU8GZegH9/view?usp=drivesdk">download</a></td>
 </tr>
             </table>
         </div>
@@ -107,6 +107,9 @@
         }
         a:hover{
             color: chartreuse;
+        }
+        .dep{
+            color: brown;
         }
     </style>
 </body>
