--- a/Cquestionpaper.html
+++ b/Cquestionpaper.html
@@ -85,7 +85,7 @@
 </tr>
 <tr> 
 <td>1</td>
-<td>Foundation of computer science for  <sup>1st sem.</sup> Topic:Electronic mail,search engines,web browser</td>
+<td>Foundation of computer science<br> for  <sup class="dep">1st sem.</sup> Topic:Electronic mail,<br>search engines,web browser</td>
 <td><a href="https://drive.google.com/file/d/10c2f9arbK5a8iB_Ddp6bjBWNU8GZegH9/view?usp=drivesdk">download</a></td>
 </tr>
             </table>
@@ -107,6 +107,9 @@
         }
         a:hover{
             color: chartreuse;
+        }
+        .dep{
+            color: red;
         }
     </style>
 </body>
