--- a/Cquestionpaper.html
+++ b/Cquestionpaper.html
@@ -77,7 +77,7 @@
 </table>
         </div>
         <div id="assignment" class="tab-pane fade">
-            <table class-="table table-bordered">
+            <table class="table table-bordered"> 
 <tr>
     <th>No.</th>
     <th>Title</th>
@@ -85,10 +85,10 @@
 </tr>
 <tr> 
 <td>1</td>
-<td>Foundation of computer science<br> for  <sup class="dep">1st sem.</sup> Topic:Electronic mail,<br>search engines,web browser</td>
+<td>Foundation of computer<br> science for  <sup class="dep">1st sem.</sup> Topic:Electronic mail,<br>search engines,web browser</td>
 <td><a href="https://drive.google.com/file/d/10c2f9arbK5a8iB_Ddp6bjBWNU8GZegH9/view?usp=drivesdk">download</a></td>
 </tr>
-            </table>
+</table>
         </div>
     </div>
     </div>
