--- a/Cquestionpaper.html
+++ b/Cquestionpaper.html
@@ -45,7 +45,7 @@
             </tr>
             <tr>
                 <td>1</td>
-                <td>CBLU(I<sup>st sem.</sup>Human value<br> and Ethics notes for <br>all UG(AEC))</td>
+                <td>CBLU(<sup class="dep">1st sem.</sup>Human value<br> and Ethics notes for <br>all UG(AEC))</td>
                 <td><a href="https://drive.google.com/file/d/1zBpce-KjiDWzNgG52RkLxOJ8-bmjvlKB/view?usp=drivesdk">download</a></td>
             </tr>   
         </table>
@@ -58,7 +58,7 @@
                 <th>Action</th>
             </tr>
             <td>1</td>
-            <td>CBLU(1<sup>st sem.2025</sup> MAIN-questionpaper for all UG Courses Papaer are :MDC,AEC,SEC,VAC) Subjects:Human value and Ethics,Communicative Skills in English,Basic It Tools,CSR and business Ethics</td>
+            <td>CBLU(<sup class="dep">1st sem.2025</sup> MAIN-questionpaper for all UG Courses Papaer are :MDC,AEC,SEC,VAC) Subjects:Human value and Ethics,Communicative Skills in English,Basic It Tools,CSR and business Ethics</td>
             <td><a href="https://drive.google.com/file/d/1-B2Bq14qhh1sSsnewiXO4JNvaWJoWcrC/view?usp=drivesdk">download</a></td> 
     </table>
 </div>  
@@ -71,7 +71,7 @@
 </tr>
 <tr>
     <td>1</td>
-    <td>12th Maths practical(I<sup>sem.2025</sup>)</td>
+    <td>12th Maths practical(<sup class="dep">1sem.2025</sup>)</td>
     <td><a href="https://drive.google.com/file/d/10ZxCzO0zt5GQfrt6PQMeL9iiur2NRFiu/view?usp=drivesdk">download</a></td>
 </tr>
 </table>
